Fix pagintor jump, add image pre-load

--- a/packages/venia-concept/src/components/Image/image.css
+++ b/packages/venia-concept/src/components/Image/image.css
@@ -26,6 +26,7 @@
 
 .image_pending {
     composes: image;
+    height: 0; /* if not set, paginator will jump off-screen */
     opacity: 0;
     position: absolute;
 }
